tests/sksl/errors/OverflowIntLiteral.glsl
### Compilation failed:

error: 2: integer is out of range for type 'int': -2147483649
error: 4: integer is out of range for type 'int': 2147483648
error: 5: integer is out of range for type 'int': 2147483648
3 errors
